testsuite/gna/bug063/dff.expected
dff.vhdl:10:25:error: invalid use of UTF8 character for '
           if (CLEAR = ‘1’) then
                        ^
dff.vhdl:11:23:error: invalid use of UTF8 character for '
                Q <= ‘0’;
                      ^
dff.vhdl:12:23:error: invalid use of UTF8 character for '
           elsif (CLK’event and CLK = ‘1’) then
                      ^
dff.vhdl:12:42:error: invalid use of UTF8 character for '
           elsif (CLK’event and CLK = ‘1’) then
                                         ^
